--- a/loanShark.html
+++ b/loanShark.html
@@ -2,8 +2,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Total Loan Cost</title>
-	<link rel="stylesheet" type="text/css" href="loan.css" />
-	<script type="text/javascript" src="loan.js"></script>
+	<link rel="stylesheet" type="text/css" href="loanPayment.css" />
+	<script type="text/javascript" src="loanPayment.js"></script>
 </head>
 
 <body>
