--- a/HO4.2.html
+++ b/HO4.2.html
@@ -2,8 +2,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Total Loan Cost</title>
-	<link rel="stylesheet" type="text/css" href="loan.css" />
-	<script type="text/javascript" src="loan.js"></script>
+	<link rel="stylesheet" type="text/css" href="HandsOn4.2.css" />
+	<script type="text/javascript" src="HandsOn4.2.js"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 		<br />
 
 		<label for="total_cost">Total Loan Cost:  $</label>
-		<input type="text" id="total_cost" disabled="disabled" />
+		<input type="text" id="total_cost"/>
 		<br><br>/
 		<img class = "displayed" src="https://tu-cis.github.io/cis-2013-starter/carsalesman.jpg" alt="sketchy"  height="450" width="600">
 	</div>
