--- a/loanSharkRemake.html
+++ b/loanSharkRemake.html
@@ -28,7 +28,7 @@
 		<label for="total_cost">Total Loan Cost:  $</label>
 		<input type="text" id="total_cost"/>
 		<br><br>/
-		<img class = "displayed" src="https://images.app.goo.gl/LzCBdqB8cyUoaYyK7" alt="sketchy"  height="450" width="600">
+		<img class = "displayed" src="https://emw9241.github.io/cis-2013-starter/carSalesManImage.jpg" alt="sketchy"  height="450" width="600">
 	</div>
 </body>
 </html>
