--- a/HO6.html
+++ b/HO6.html
@@ -5,7 +5,7 @@
 <head>
     <title>Printer Troubleshooter</title>
 
-	
+	<link rel="stylesheet" type="text/css" href="HO6.css" />
 	<script src="HO6.js"></script>
 
 </head>
