--- a/HO6.html
+++ b/HO6.html
@@ -40,7 +40,7 @@
 
 		<textarea rows="4" cols="75" id="output" placeholder="What troubleshooting steps should you take?" disabled=></textarea>
         
-           <img src="printertroubleshoottable.png" class="img-responsive" alt="Responsive image" class="img-rounded" width="450" height="375">
+           <img src="https://media.giphy.com/media/l2SpMDbxk09bYpGPC/giphy.gif" class="img-responsive" alt="Responsive image" class="img-rounded" width="450" height="375">
     </div>
  
     
