--- a/HO6.html
+++ b/HO6.html
@@ -6,7 +6,7 @@
     <title>Printer Troubleshooter</title>
 
 	<link rel="stylesheet" type="text/css" href="HO6.css" />
-	<script src="ProgHO6.js"></script>
+	<script src="HO6.js"></script>
 
 </head>
 
