--- a/HandsOn8.html
+++ b/HandsOn8.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
    <title>The Number Guessing Game (with input validation)</title>
-   <script src="ho8.js"></script>
+   <script src="HandsOn8.js"></script>
 </head>
 <body>
    <section>
