Guessing Game HO8

--- a/ho8.html
+++ b/ho8.html
@@ -4,6 +4,10 @@
    <script src="ho8.js"></script>
 </head>
 <body>
+   <div id="content">
+        <h1>Guessing Game</h1>
+        <p>You decide the range, the computer decides the number. See how many tries it takes to guess right!</p>
+
    <section>
         <h1>I hope you enjoyed the game!!</h1>
    </section>
