Hands on 9 edit

--- a/ho9.html
+++ b/ho9.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <head>
     <title>MIS2013 Phrase Manipulator</title>
-    <link rel="stylesheet" type="text/css" href="fib.css" />
+    <link rel="stylesheet" type="text/css" href="ho9.css" />
     <script type="text/javascript" src="ho9.js"></script>
 </head>
 
